[DDW-680] Prevent overlap of text in dialog title

--- a/source/renderer/app/components/widgets/Dialog.scss
+++ b/source/renderer/app/components/widgets/Dialog.scss
@@ -7,12 +7,14 @@
   width: 580px;
 
   & > .title {
+    align-self: center;
     font-family: var(--font-medium);
     font-size: 18px;
     letter-spacing: 1px;
     line-height: 1.39;
     text-align: center;
     text-transform: uppercase;
+    max-width: calc(100% - 80px);
   }
 
   & > .subtitle {
